--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.3",
-    "multer": "^1.4.5-lts.1"
+    "express-handlebars": "^6.0.7",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5"
   }
 }
