--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^6.0.7",
     "mongoose": "^8.5.3",
+    "mongoose-paginate-v2": "^1.8.3",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5"
   }
